fluxengine-local-test/src/test/dsl/junit/InternalTestProjectの移行/error/20190322/rule/AC33AdPlaceHolderRule.dsl
test 1 placeHolderEvent:
    2019/01/24 01:12:34:
        placeHolderEvent:
            media: "YSS"                  # 媒体
            accountId: 610006             # アカウントID
            network: "Search"             # network
            campaignId: 620006            # キャンペーンID
            campaignName: 630006          # キャンペーンNAME
            placeholderType: 2            # count(placeholder_type)